--- a/newsapilib/build.gradle
+++ b/newsapilib/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation files('libs/java-json.jar')
+    implementation 'org.json:json:20220320'
 }
 
 sourceCompatibility = "1.7"
